修改存储字典

--- a/KSExportPrefab/Assembly-CSharp.csproj
+++ b/KSExportPrefab/Assembly-CSharp.csproj
@@ -70,16 +70,17 @@
     <Compile Include="Assets\Scripts\UI\UIIconImageView.cs" />
     <Compile Include="Assets\Scripts\UI\UISuperGameObject.cs" />
     <Compile Include="Assets\Scripts\UI\UITopClass.cs" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSMaterial.txt" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSScript.txt" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSPrefab.txt" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSAnimator.txt" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSImage.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSShader.txt" />
     <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSSuper.txt" />
     <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSAnimationClip.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSAnimator.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSPrefab.txt" />
     <None Include="Assets\Resources\Shader\custom-add-ui.shader" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSMaterial.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSError.txt" />
     <None Include="Assets\Resources\Shader\custom-particle-alphablend_rgba.shader" />
-    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSShader.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSImage.txt" />
+    <None Include="Assets\Resources\ExportNotes\ExportdPanel\KSScript.txt" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>I:/GitHub/KSExportPrefab/KSExportPrefab/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
